--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-with-asserts==0.0.1
 Faker==19.11.0
 libgravatar==1.0.4
 lxml==4.9.3
+pillow==10.2.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2023.3.post1
