--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ lxml==4.9.3
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2023.3.post1
+requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.8.0
