--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pytz==2023.3.post1
 rcssmin==1.1.1
 rjsmin==1.2.1
 s3transfer==0.6.2
+selenium==4.18.1
 setuptools==69.1.1
 six==1.16.0
 sqlparse==0.4.4
